src/objects/npe03__Recurring_Donations_Settings__c.object
<CustomObject>
    <fields>
        <fullName>DataMigrationBatchSize__c</fullName>
        <defaultValue>25</defaultValue>
        <description>The number of records to process at a time when migrating existing Recurring Donation records to the Enhanced Recurring Donations data model.</description>
        <inlineHelpText>The number of records to process at a time when migrating existing Recurring Donation records to the Enhanced Recurring Donations data model.</inlineHelpText>
        <label>Enhanced RD Data Migration Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisableRollupsWhenCreatingInstallments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, and if Customizable Rollups are enabled, then immediate rollup calculations are disabled when new Installment Opportunities are created for a Recurring Donation.</description>
        <inlineHelpText>When selected, and if Customizable Rollups are enabled, then immediate rollup calculations are disabled when new Installment Opportunities are created for a Recurring Donation.</inlineHelpText>
        <label>Disable CRLP When Creating Installments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableAutomaticNaming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, Salesforce automatically populates the Recurring Donation Name.</description>
        <inlineHelpText>If enabled, Salesforce automatically populates the Recurring Donation Name.</inlineHelpText>
        <label>Automatic Recurring Donation Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableChangeLog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, NPSP creates a Recurring Donation Change Log record each time amount, schedule, or campaign fields of a Recurring Donation are updated.</description>
        <inlineHelpText>When enabled, NPSP creates a Recurring Donation Change Log record each time amount, schedule, or campaign fields of a Recurring Donation are updated.</inlineHelpText>
        <label>Enable Recurring Donation Change Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeClosedRecurringDonations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude Closed Recurring Donations from the Recurring Donation Opportunity Evaluation batch job.</description>
        <inlineHelpText>Exclude Closed Recurring Donations from the Recurring Donation Opportunity Evaluation batch job.</inlineHelpText>
        <label>Exclude Closed Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallmentOppAutoCreateOption__c</fullName>
        <description>Specifies when NPSP will create installment Opportunities for Recurring Donations. The default is Always Create Next Installment.</description>
        <inlineHelpText>Specifies when NPSP will create installment Opportunities for Recurring Donations. The default is Always Create Next Installment.</inlineHelpText>
        <label>Installment Opportunity Auto-Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentOppFirstCreateMode__c</fullName>
        <description>Specifies the asynchronous processing behavior NPSP will use to create the first installment Opportunity for Recurring Donations. The default is Synchronous. Other options are Asynchronous and Asynchronous_When_Bulk.</description>
        <inlineHelpText>Specifies how NPSP will create the first installment Opportunity for Recurring Donations. The default is Synchronous.</inlineHelpText>
        <label>Installment Opportunity Async Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentOppStageName__c</fullName>
        <description>The Opportunity Stage that NPSP applies to each new installment Opportunity when you create a Recurring Donation.</description>
        <inlineHelpText>The Opportunity Stage that NPSP applies to each new installment Opportunity when you create a Recurring Donation.</inlineHelpText>
        <label>Stage Name for Installment Opportunities</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRecurringDonations2Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This option enables Enhanced Recurring Donations. IMPORTANT: You must enable Enhanced Recurring Donations in NPSP Settings. Enabling in Custom Settings may cause data inconsistencies.</description>
        <inlineHelpText>This option enables Enhanced Recurring Donations. IMPORTANT: You must enable Enhanced Recurring Donations in NPSP Settings. Enabling in Custom Settings may cause data inconsistencies.</inlineHelpText>
        <label>Enhanced Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextDonationDateMatchRangeDays__c</fullName>
        <defaultValue>3</defaultValue>
        <description>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new
            installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to
            Recurring Donations where Installment Period is Monthly or Yearly.</description>
        <inlineHelpText>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new
            installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to
            Recurring Donations where Installment Period is Monthly or Yearly.</inlineHelpText>
        <label>Next Donation Date Match Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurringDonationNameFormat__c</fullName>
        <description>The format to use for Recurring Donation naming.</description>
        <inlineHelpText>The format to use for Recurring Donation naming.</inlineHelpText>
        <label>Recurring Donation Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringDonations2EnablementState__c</fullName>
        <description>Contains Enhanced Recurring Donation enablement confirmations and state.</description>
        <inlineHelpText>Contains Enhanced Recurring Donation enablement confirmations and state.</inlineHelpText>
        <label>Recurring Donations Enablement State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringDonations2MigrationState__c</fullName>
        <description>Contains latest dry run and data migration results.</description>
        <inlineHelpText>Contains latest dry run and data migration results.</inlineHelpText>
        <label>Enhanced RD Data Migration State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of records to process at a time when running the Recurring Donations batch job. The default size is 50. Reduce to a smaller number if the Recurring Donations batch job is failing due to system limits.</description>
        <inlineHelpText>The number of records to process at a time when running the Recurring Donations batch job. The default size is 50. Reduce to a smaller number if the Recurring Donations batch job is failing due to system limits.</inlineHelpText>
        <label>Recurring Donation Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusAutomationClosedValue__c</fullName>
        <description>The Recurring Donation Status set when Status Automation closes the Recurring Donation record.</description>
        <inlineHelpText>The Recurring Donation Status set when Status Automation closes the Recurring Donation record.</inlineHelpText>
        <label>Status Automation Closed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusAutomationDaysForClosed__c</fullName>
        <description>After the specified number of days, NPSP updates the Recurring Donation Status to the Status Automation Closed Value if donations aren&apos;t being received as expected.</description>
        <inlineHelpText>After the specified number of days, NPSP updates the Recurring Donation Status to the Status Automation Closed Value if donations aren&apos;t being received as expected.</inlineHelpText>
        <label>Status Automation Days for Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusAutomationDaysForLapsed__c</fullName>
        <description>After the specified number of days, NPSP updates the Recurring Donation Status to the Status Automation Lapsed Value if donations aren&apos;t being received as expected.</description>
        <inlineHelpText>After the specified number of days, NPSP updates the Recurring Donation Status to the Status Automation Lapsed Value if donations aren&apos;t being received as expected.</inlineHelpText>
        <label>Status Automation Days for Lapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusAutomationLapsedValue__c</fullName>
        <description>The Recurring Donation Status set when Status Automation updates the Recurring Donation record as Lapsed.</description>
        <inlineHelpText>The Recurring Donation Status set when Status Automation updates the Recurring Donation record as Lapsed.</inlineHelpText>
        <label>Status Automation Lapsed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusMappingDeploymentId__c</fullName>
        <description>Status mapping custom metadata deployment Id</description>
        <inlineHelpText>Status mapping custom metadata deployment Id</inlineHelpText>
        <label>Status Mapping Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseFiscalYearForRecurringDonationValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this option enables fiscal year for Recurring Donation value totals. To set the fiscal year start month, go to Setup | Company Settings | Fiscal Year. NOTE: Use Standard Fiscal Year only. Do not enable Custom Fiscal Year.</description>
        <inlineHelpText>When checked, this option enables fiscal year for Recurring Donation value totals. To set the fiscal year start month, go to Setup | Company Settings | Fiscal Year. NOTE: Use Standard Fiscal Year only. Do not enable Custom Fiscal Year.</inlineHelpText>
        <label>Use Fiscal Year for Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>